# sdk-plugins

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  storage.rs
nostr/: Cargo.toml
nostr/src/: context.rs  encrypt.rs  error.rs  event.rs  lib.rs  model.rs  persist.rs  sdk_event.rs  sdk_services.rs
nostr/src/handlers/: builder.rs  mod.rs  routines.rs
nostr/src/nips/: mod.rs
nostr/src/nips/nip47/: error.rs  event.rs  forward.rs  handler.rs  manager.rs  mod.rs  model.rs  persist.rs  routines.rs  sdk_event.rs  sdk_services.rs
nostr/src/nips/nip57/: forward.rs  manager.rs  mod.rs  model.rs  persist.rs  routines.rs  sdk_event.rs  sdk_services.rs
