[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
members = ["core", "nostr"]
resolver = "2"

[workspace.package]
version = "0.11.7"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "113749fd36dd7a20358dc40526c4a30147f8c1a8", features = ["liquid", "nwc"] }
sdk-macros = { git = "https://github.com/breez/breez-sdk", rev = "113749fd36dd7a20358dc40526c4a30147f8c1a8" }
async-trait = "0.1.86"
thiserror = "1.0"
log = "0.4.20"

[workspace.lints.clippy]
empty_line_after_doc_comments = "allow"
