[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
members = ["core", "nostr"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sdk-macros = { git = "https://github.com/breez/breez-sdk", rev = "6ad80932b9949fdbfb60d85c6c7e41c117081472" }
async-trait = "0.1.86"
thiserror = "1.0"
log = "0.4.20"

[workspace.lints.clippy]
empty_line_after_doc_comments = "allow"
