[package]
name = "breez-sdk-plugins"
edition = "2021"
version = "0.0.1"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
sdk-common = { workspace = true }
sdk-macros = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
aes = "0.8.4"
aes-gcm = "0.10.3"
hex = "0.4"
