[package]
name = "breez-nostr"
edition = "2021"
version = "0.0.1"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
sdk-common = { workspace = true }
sdk-macros = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
once_cell = "1.19"
breez-plugins = { path = "../core" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
tokio_with_wasm = { version = "0.8.7", features = [
    "macros",
    "rt",
    "sync",
    "time",
] }
nostr-sdk = { version = "0.43.0", features = ["nip04", "nip44"] }
web-time = "1.1.0"
urlencoding = "2.1.3"

# Non-Wasm dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
uuid = { version = "1.8.0", features = ["v4"] }

# Wasm dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
uuid = { version = "1.8.0", features = ["v4", "js"] }

[features]
nip47 = ["nostr-sdk/nip47"]
nip57 = []
